[tool.poetry]
name = "graphviz-overlay"
version = "0.1.1"
description = "Generate templated graphviz source files from structured data"
authors = ["Ronni Elken Lindsgaard <ronni.lindsgaard@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/rlindsgaard/graphviz-overlay"
documentation = "https://graphviz-overlay.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.3.2"

[tool.poetry.scripts]
graphviz-overlay = "graphviz_overlay.graph:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
