[tool.poetry]
name = "graphviz-overlay"
version = "0.1.2-dev"
description = "Generate templated graphviz source files from structured data"
authors = ["Ronni Elken Lindsgaard <ronni.lindsgaard@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/rlindsgaard/graphviz-overlay"
documentation = "https://graphviz-overlay.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.3.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
graphviz-overlay = "graphviz_overlay.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
